--- a/css/global.css
+++ b/css/global.css
@@ -35,7 +35,7 @@ section {
 
 /* HERO SECTION */
 .hero {
-  background: url('../images/hero/electrician-working.jpg') center/cover no-repeat;
+  background: url('../images/hero/electrician-working.webp') center/cover no-repeat;
   color: #fff;
   text-align: center;
   height: 100vh;
